--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -547,7 +547,7 @@
     "error-to-innodb": "Errore bat gertatu da taula InnoDBra bihurtzean.",
     "error-updating-product-stock": "Errore bat gertatu da artikuluaren stocka eguneratzean!",
     "errors": "Erroreak",
-    "es_EC": "Gaztelania (Ekuatore)",
+    "es_EC": "Espainiako gaztelania (Ekuador)",
     "es-tax-exception-e1": "Espainia: BEZaren 20. legearen artikuluaren salbuespena",
     "es-tax-exception-e2": "Espainia: BEZaren Legearen 21. artikuluaren salbuespena",
     "es-tax-exception-e3": "Espainia: BEZaren Legearen 22. artikuluaren salbuespena",
