--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -229,7 +229,7 @@
     "children-accounts": "Children Accounts",
     "choose-currency": "Choose currency",
     "choose-doc-type": "Choose document type",
-    "choose-employee": "Choose employee",
+    "choose-employee": "Scegli dipendente",
     "choose-files": "Scegli i file",
     "choose-payment-method": "Choose payment method",
     "choose-serie": "Choose serie",
@@ -379,7 +379,7 @@
     "database-name-must-be-lowercase": "il-nome-del-database-deve-essere-maiuscolo",
     "date": "data",
     "date-in": "Data in",
-    "date-of-suspension": "Date of suspension",
+    "date-of-suspension": "Data di sospensione",
     "date-of-the-document": "Data di nascita",
     "date-out": "Data di uscita",
     "date-out-of-exercise-range": "Data dall'intervallo di eccitazione 0",
@@ -727,7 +727,7 @@
     "high": "Alto",
     "high-purchase-price": "Prezzo più alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
-    "hint-vat-register": "View\/Modify VAT registration",
+    "hint-vat-register": "Visualizza\/Modifica registro IVA",
     "history": "Historial",
     "homepage": "Pagina iniziale",
     "host": "host:",
@@ -737,7 +737,7 @@
     "https": "HTTPS",
     "i-forgot-password": "Password dimenticata",
     "iban": "IBAN",
-    "icon": "icon",
+    "icon": "Icona",
     "id": "Id.",
     "idaccount": "Id. account",
     "idem-wildcard-info": "Copia il valore della riga precedente",
@@ -750,7 +750,7 @@
     "import-accounting-plan": "Importa piano contabile",
     "import-accounting-plan-p": "import-accounting-plan-p",
     "import-file": "Importare file",
-    "in-progress": "En progreso",
+    "in-progress": "In corso",
     "in-stock": "in-stock",
     "inactive": "inattivo",
     "income-and-expenses": "Ingressi e Uscite",
@@ -845,7 +845,7 @@
     "languages-gl_ES": "lingue-gl_ES",
     "languages-it_IT": "Italiano",
     "languages-pl_PL": "Polaco",
-    "languages-pt_BR": "Portugués (Brasil)",
+    "languages-pt_BR": "Portoghese (Brasile)",
     "languages-pt_PT": "languages-pt_PT",
     "languages-va_ES": "languages-va_ES",
     "last-activity": "L'ultima attività",
@@ -969,7 +969,7 @@
     "month-1": "Enero",
     "month-10": "Ottobre",
     "month-11": "Noeviembre",
-    "month-12": "Diciembre",
+    "month-12": "Dicembre",
     "month-2": "Febrero",
     "month-3": "Marzo",
     "month-4": "Abril",
@@ -1106,7 +1106,7 @@
     "passenger": "Passeggero",
     "password": "Contraseña",
     "pattern": "pattern",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
+    "pattern-without-number": "Il pattern selezionato non include un numero, quindi è molto probabile che generi codici duplicati.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "Paga",
@@ -1188,7 +1188,7 @@
     "print-data-records": "Stampa tutti i record",
     "print-export-options": "Stampa ed esporta opzioni",
     "print-list-of-records": "Stampa l'elenco dei record",
-    "print-price": "Imprimir precios",
+    "print-price": "Stampa prezzi",
     "print-quantity": "Imprimir cantidad",
     "printed": "Stampato",
     "printing-format": "printing-format",
@@ -1385,7 +1385,7 @@
     "show-price": "Mostra prezzo su stampa",
     "show-quantity": "Show quantity on print",
     "show-section-new": "Mostra sezione creazione",
-    "signature": "Signature",
+    "signature": "Firma",
     "simple": "Semplice",
     "simplified": "semplificata",
     "size": "size",
@@ -1408,7 +1408,7 @@
     "special-account": "Conto speciale",
     "special-accounting-entries": "Voci contabili speciali",
     "special-accounts": "conti speciali",
-    "specials-actions": "Specials Actions",
+    "specials-actions": "Azioni speciali",
     "spreadsheet-xls": "File XLS",
     "standard": "standard",
     "start": "Inicio",
@@ -1504,7 +1504,7 @@
     "telemetry-data-to-send": "dati di telemetria da inviare",
     "telephone-prefix": "Prefisso telefonico",
     "template": "Modello",
-    "template-error": "template-error",
+    "template-error": "Errore nel modello",
     "template-not-found": "Modello non trovato",
     "templates": "Plantillas",
     "test": "Test",
@@ -1566,7 +1566,7 @@
     "type-success": "type-success",
     "type-warning": "Type warning",
     "unbalance": "sbilanciato",
-    "unbalanced-entry": "Asiento descuadrado",
+    "unbalanced-entry": "Prenotazione non bilanciata",
     "unchecked": "unchecked",
     "under-minimums": "under-minimums",
     "undo": "Disfare",
