--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -26,7 +26,7 @@
     "accounting-balance": "Saldo księgowe",
     "accounting-balances": "Balances",
     "accounting-concept": "Concepto contable",
-    "accounting-data-missing": "Plan contable no encontrado para el ejercicio %exerciseName%",
+    "accounting-data-missing": "Nie znaleziono planu kont dla ćwiczenia %exerciseName%",
     "accounting-date": "Fecha de asiento",
     "accounting-entries": "Asientos",
     "accounting-entry": "Asiento",
@@ -100,7 +100,7 @@
     "apc-get-key-item": "Obtenido elemento '%item%' desde APC.",
     "apc-set-key-item": "Asignado elemento '%item%' a APC.",
     "api": "API",
-    "api-disabled": "API desactivada. Puede activarla desde preferencias de aplicación.",
+    "api-disabled": "API wyłączone. Możesz je włączyć w preferencjach aplikacji.",
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versión de API no encontrada",
@@ -377,7 +377,7 @@
     "database": "Base de datos",
     "database-error": "Błąd połączenia z bazą danych",
     "database-name-must-be-lowercase": "El nombre de la base de datos debe ser en minúsculas",
-    "date": "Fecha",
+    "date": "Data",
     "date-in": "Fecha entrada",
     "date-of-suspension": "Data zawieszenia",
     "date-of-the-document": "Fecha del documento a generar",
@@ -423,7 +423,7 @@
     "delivery-note-email-subject": "Su albarán %code%",
     "delivery-note-email-text": "Buenos días, le adjunto su albarán %code%",
     "delivery-notes": "Albaranes",
-    "delivery-notes-button": "Alb. Ptes:",
+    "delivery-notes-button": "Faktury realizowane:",
     "department": "Departamento",
     "departments": "Działy",
     "desc": "Descripción",
@@ -451,7 +451,7 @@
     "destination-warehouse": "Almacén de destino",
     "detail": "Szczegóły",
     "details": "Detalles",
-    "difference": "Diferencia",
+    "difference": "Różnica",
     "different-passwords": "Las contraseñas no coinciden para el usuario %userNick%",
     "different-than": "Diferente que",
     "disable": "Desactivar",
@@ -579,7 +579,7 @@
     "exempt": "Exento",
     "exercise": "Ejercicio",
     "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
-    "exercise-date-range-exists": "Ya existe un ejercicio en ese rango de fechas (%start% - %end%)",
+    "exercise-date-range-exists": "Istnieje już ćwiczenie w tym przedziale dat (%start% - %end%)",
     "exercise-not-found": "Ejercicio no encontrado.",
     "exercise-without-accounting-plan": "El ejercicio %exercise% todavía no tiene plan contable",
     "exercises": "Ejercicios",
@@ -692,7 +692,7 @@
     "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
     "global-dto": "Dto. global",
     "global-dto-2": "Dto. global 2",
-    "greater-than": "Mayor que",
+    "greater-than": "Większy niż",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
     "group": "Grupo",
     "group-accounts": "Agrupar cuentas",
@@ -765,13 +765,13 @@
     "installed-plugins": "Instalados",
     "installer": "Instalador",
     "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
-    "installer-requirements": "Las siguientes extensiones y funciones son necesarias en FacturaScripts:",
+    "installer-requirements": "Następujące rozszerzenia i funkcje są wymagane w FacturaScripts:",
     "integrity-check": "Kontrola integralności",
     "integrity-check-help": "Esta es una verificación de la integridad del sistema, descrita como",
     "interest": "Interés",
     "international-identifier": "Identificación internacional",
     "intra-community": "Intracomunitaria",
-    "invalid-alphanumeric-code": "El código introducido (%value%) no es válido. (%column%) debe tener entre %min% y %max% números o letras, sin espacios, acentos, ni otros caracteres.",
+    "invalid-alphanumeric-code": "Wprowadzony kod (%value%) jest nieprawidłowy. (%column%) powinien zawierać od %min% do %max% cyfr lub liter, bez spacji, akcentów ani innych znaków.",
     "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
     "invalid-date": "Fecha %date% no válida.",
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
@@ -1027,7 +1027,7 @@
     "non-editable-document": "Documento no editable",
     "none": "Ninguno",
     "normal": "Normal",
-    "not-allowed-delete": "No tiene permiso para eliminar",
+    "not-allowed-delete": "Nie masz uprawnień do usunięcia",
     "not-allowed-modify": "No tiene permiso para modificar",
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
@@ -1063,7 +1063,7 @@
     "only-suspended": "Solamente suspendidos",
     "open": "Abrir",
     "open-exercise": "Abrir ejercicio",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "Otwórz w nowej karcie",
     "opened": "Abierto",
     "opening-acounting-completed": "Apertura de ejercicio correcta",
     "opening-operation": "Apertura",
@@ -1078,11 +1078,11 @@
     "order-email-text": "Buenos días, le adjunto su pedido %code%",
     "orders": "Pedidos",
     "origin": "Origen",
-    "origin-warehouse": "Almacén de orígen",
+    "origin-warehouse": "Magazyn źródłowy",
     "original": "Original",
     "original-file": "Plik oryginalny",
     "other-data": "Otros datos",
-    "others-filters": "Otros filtros",
+    "others-filters": "Inne filtry",
     "out-of-stock": "Sin stock",
     "page": "Página",
     "page-break": "Złamanie strony",
@@ -1091,7 +1091,7 @@
     "page-not-found-p": "No hemos encontrado la página que busca.",
     "page-option-info": "Estas son las opciones de maquetación y permisos de este formulario o listado. Puedes modificar el orden de los campos, ocultarlos, hacerlos de solo lectura o aumentar el nivel de privilegios. Los cambios se aplicarán al usuario seleccionado.",
     "page-total-amount": "Łącznie na stronie",
-    "pagename": "Nombre de página",
+    "pagename": "Nazwa strony",
     "pages": "Páginas",
     "paid": "Pagado",
     "paid-or-unpaid": "Pagado o impagado",
@@ -1404,7 +1404,7 @@
     "sorted-asc": "Posortowane rosnąco",
     "sorted-desc": "Posortowane malejąco",
     "source": "Fuente",
-    "source-code": "Código fuente",
+    "source-code": "Kod źródłowy",
     "special-account": "Cuenta especial",
     "special-accounting-entries": "Asientos especiales",
     "special-accounts": "Konta specjalne",
@@ -1468,7 +1468,7 @@
     "supplier-invoice": "Factura de Proveedor",
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
     "supplier-invoices": "Facturas de proveedores",
-    "supplier-not-found": "Proveedor no encontrado",
+    "supplier-not-found": "Dostawca nie znaleziony",
     "supplier-order": "Pedido de Proveedor",
     "supplier-orders": "Zamówienia od dostawców",
     "supplier-payment-concept": "Płatność dokumentu %document%",
@@ -1629,7 +1629,7 @@
     "view-estimation": "Zobacz kosztorys",
     "view-order": "Zobacz zamówienie",
     "warehouse": "Almacén",
-    "warehouse-cant-be-same": "El almacén de orígen y de destino no puede ser el mismo.",
+    "warehouse-cant-be-same": "Magazyn źródłowy i docelowy nie mogą być takie same.",
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
     "warehouses": "Almacenes",
     "warning": "Atención",
