--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -604,7 +604,7 @@
     "field-required": "Campo obrigatório: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
+    "file-extension-not-accepted": "Erro ao enviar o arquivo %fileName% pois sua extensão não é permitida. As extensões permitidas são: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
     "file-not-found": "Arquivo %fileName% não encontrado.",
@@ -684,7 +684,7 @@
     "generated-families": "0 famílias geradas.",
     "generated-invoice": "Fatura gerada",
     "generated-manufacturers": "0 fabricantes gerados.",
-    "generated-products": "0 produtos gerados.",
+    "generated-products": "%quantity% produtos gerados",
     "generated-subaccounts": "%quantity% subcontas geradas.",
     "generated-supplier": "0 fornecedor gerado.",
     "generated-supplier-delivery-notes": "%quantity% notas de entrega do fornecedor geradas.",
@@ -915,7 +915,7 @@
     "machines": "máquinas",
     "macro-account-note-info": "Keys for values replacement macro",
     "mail-server-error": "Error al conectar al servidor de correio",
-    "mail-test-error": "mail-test-error",
+    "mail-test-error": "Falha no teste de e-mail",
     "mail-test-ok": "Prova de email satisfatória",
     "mailer": "Controlador de email",
     "main-address": "Endereço principal",
@@ -1054,7 +1054,7 @@
     "observations": "Observações",
     "october": "Octubre",
     "offsetting-account": "Offsetting account",
-    "only-active": "only-active",
+    "only-active": "Somente ativos",
     "only-charged": "only-charged",
     "only-closed": "Apenas fechado",
     "only-insert": "somente-inserir",
@@ -1109,7 +1109,7 @@
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
-    "pay": "pay",
+    "pay": "Pagar",
     "pay-with-card": "Pagar com cartão",
     "payment": "Pagamento",
     "payment-date": "Data de pagamento",
@@ -1170,7 +1170,7 @@
     "positive-balance": "Saldo positivo",
     "post-office-box": "Caixa postal",
     "postgresql": "PostgreSQL",
-    "precio": "Prive",
+    "precio": "Preço",
     "predefined-concepts": "Predefined Concepts",
     "preferences": "Preferências",
     "preview": "preview",
@@ -1220,7 +1220,7 @@
     "pvp-total": "Total retail price",
     "pvp-unit": "Unit retail price",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
-    "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
+    "pvptotal-line-error": "Erro no valor de 'pvptotal' da linha %reference% do documento. Valor correto: %total%",
     "quantity": "Quantidade",
     "quantity-abb": "Quantidade-abrev",
     "quantity-remaining": "Cantidad restante",
@@ -1279,7 +1279,7 @@
     "renew": "Renovar",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
-    "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
+    "renumber-accounting-error": "Ocorreu um erro ao renumerar lançamentos contábeis no exercício fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumbering of accounting entries completed",
     "renumber-accounting-p": "Renumerar as entradas por data, de menor para maior",
     "renumber-invoices-p": "Renumerar as faturas com base na data, de menor para maior",
@@ -1425,7 +1425,7 @@
     "stock": "estoque",
     "stock-transfer": "stock transfer",
     "stock-transfers": "stock transfers",
-    "stockmax": "Estoque max.",
+    "stockmax": "Estoque máximo",
     "stockmin": "Stock min.",
     "storage-limit-almost": "Limite de armazenamento quase atingido (%limit%). Restam %free%",
     "storage-limit-reached": "s",
