--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -684,7 +684,7 @@
     "generated-families": "0 famílias geradas.",
     "generated-invoice": "generated-invoice",
     "generated-manufacturers": "0 fabricantes gerados.",
-    "generated-products": "0 produtos gerados.",
+    "generated-products": "%quantity% produtos gerados",
     "generated-subaccounts": "0 sub-contas geradas.",
     "generated-supplier": "0 fornecedor gerado.",
     "generated-supplier-delivery-notes": "0 notas de entrega do fornecedor geradas.",
@@ -748,7 +748,7 @@
     "impacted-tax-subaccount": "impacted-tax-subaccount",
     "import": "import",
     "import-accounting-plan": "Importar Plano de Contabilidade",
-    "import-accounting-plan-p": "import-accounting-plan-p",
+    "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contabilístico padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
     "import-file": "Fichero de importación",
     "in-progress": "Em andamento",
     "in-stock": "in-stock",
@@ -1583,7 +1583,7 @@
     "until-date": "until-date",
     "until-subaccount": "until-subaccount",
     "update": "update",
-    "update-stock": "Update stock",
+    "update-stock": "Atualizar stock",
     "update-supplier-prices": "update-supplier-prices",
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
