--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -933,7 +933,7 @@
     "max-input-vars-warning": "Amb la configuració actual de PHP (max_input_vars) no podràs treballar amb documents de més de %numlines% línies.",
     "max-risk": "Risc màxim",
     "maximum-amount-with-cifnif": "Màxim import amb CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-without-cifnif": "Màxim import sense CIF\/NIF",
     "maximum-stock": "Estoc màxim",
     "may": "Maig",
     "mega-search": "MegaCercador",
@@ -1019,7 +1019,7 @@
     "no-invoice": "Sense factura",
     "no-outstanding-amount": "No hi ha cap cantitat pendent",
     "no-print-permission": "No té permís per imprimir o exportar",
-    "no-reference": "Sin referencia",
+    "no-reference": "Sense referència",
     "no-selected-item": "No hi ha cap element seleccionat",
     "no-stock": "No hi ha estoc",
     "non-editable-accounting-entry": "Assentament no editable",
@@ -1152,7 +1152,7 @@
     "plugin-installation-disabled": "L'instalacion de complements està deshabilitada en este servidor",
     "plugin-installed": "S'ha instalat el Plugin '%pluginName%'",
     "plugin-need-update": "El plugin %plugin% necessitarà actualització per a funcionar amb la nova versió de FacturaScripts.",
-    "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
+    "plugin-need-update-but": "El plugin %plugin% encara no té una actualització compatible.",
     "plugin-needed": "Se necessita el Plugin %pluginName%.",
     "plugin-needs-fs-version": "El complement %pluginName% necessita FacturaScripts %minVersion% pero tens instalat FacturaScripts %version%",
     "plugin-not-compatible": "El complement %pluginName% no és compatible en FacturaScripts 2018.",
@@ -1615,7 +1615,7 @@
     "vat-document": "Document de l'IVA",
     "vat-exception": "Excepció d'IVA",
     "vat-number-is-short": "El número '%vat-number%' es demasiado corto",
-    "vat-number-not-vies": "El número '%vat-number%' no está registrado en el sistema VIES",
+    "vat-number-not-vies": "El número '%vat-number%' no està registrat en el sistema VIES",
     "vat-regime": "Règim de l'IVA",
     "VAT-register": "Llibre d'imposts",
     "vat-regularization": "Regularització de l'IVA",
