Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1088,7 +1088,7 @@
     "page-break": "Salto de página",
     "page-configuration": "Seiteneinstellung",
     "page-not-found": "Página no encontrada",
-    "page-not-found-p": "No hemos encontrado la página que busca.",
+    "page-not-found-p": "Die gesuchte Seite wurde nicht gefunden.",
     "page-option-info": "Von hier aus können Sie die sichtbaren Felder in dieser Liste oder Formular ändern",
     "page-total-amount": "Gesamt Seite",
     "pagename": "Seitenname",
@@ -1239,7 +1239,7 @@
     "rebuild-completed": "Wiederaufbau abgeschlossen",
     "rebuild-stock": "Bestand neu erstellen",
     "receipt": "Beleg",
-    "receipt-expense-account": "receipt-expense-account",
+    "receipt-expense-account": "Ausgaben im Beleg %document%",
     "receipts": "Rechnungen",
     "record-deleted-correctly": "Datensatz wurde korrekt gelöscht!",
     "record-deleted-error": "Fehler beim löschen des Registers",
@@ -1351,7 +1351,7 @@
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Standort gesendet",
     "sent-a-picture": "Ein Bild gesendet",
-    "sent-a-video": "Envió un video",
+    "sent-a-video": "Ein Video gesendet",
     "sent-message-by": "Nachricht gesendet von %nick% am %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "September",
@@ -1417,7 +1417,7 @@
     "start-time": "Startzeit",
     "starting-cron": "Ab FacturaScripts Cron...",
     "state": "Zustand",
-    "states": "states",
+    "states": "States",
     "status": "Status",
     "status-document": "Statusbeleg",
     "status-name-valid-length": "Ungültiger Statusname Muss zwischen 1 und 20 Zeichen lang sein.",
@@ -1429,7 +1429,7 @@
     "stockmin": "Lager min.",
     "storage-limit-almost": "Límite de almacenamiento casi alcanzado (%limit%). Quedan %free%",
     "storage-limit-reached": "Speicherlimit erreicht",
-    "stripe": "Stripe",
+    "stripe": "Streifen",
     "structured-data-csv": "CSV-Datei",
     "sub-account": "Unterkonto",
     "sub-type": "sub-type",
@@ -1576,7 +1576,7 @@
     "unlimited": "Unbegrenzt",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
-    "unlink-install-ok": "Instalación borrada del registro correctamente.",
+    "unlink-install-ok": "Installation erfolgreich aus dem Register gelöscht.",
     "unlock-entry": "Eintrag entsperren",
     "unpaid": "Unbezahlt",
     "until-accounting-entry": "until-accounting-entry",
@@ -1665,7 +1665,7 @@
     "years": "Jahre",
     "yes": "wenn",
     "yesterday": "Gestern",
-    "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-cant-delete-primary-variant": "Sie können die Hauptvariante des Produkts nicht löschen",
     "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
     "you-sent-a-location": "Enviaste una ubicación",
