--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -141,7 +141,7 @@
     "background-overlay": "Color de fondo superpuesto (overlay)",
     "badge": "Distintivo",
     "balance": "Bilancio",
-    "balance-account": "Balance account",
+    "balance-account": "Bilancio contabile",
     "balance-account-abreviated": "Balance account abreviated",
     "balance-amounts": "Trial Balance",
     "balance-sheet": "Bilancio",
@@ -254,7 +254,7 @@
     "codbarras": "Codice a barre",
     "code": "codice",
     "codiso": "Codice ISO",
-    "color": "colore",
+    "color": "Colore",
     "color-danger": "Colore pericolo",
     "color-dark": "Colore scuro",
     "color-info": "Colore info",
@@ -336,7 +336,7 @@
     "creation-date": "Data di creazione",
     "credit": "Credito",
     "crm": "CRM",
-    "cron-job": "cron-job",
+    "cron-job": "Lavoro pianificato",
     "cron-timeout": "Il cron è stato interrotto per non superare il tempo massimo di esecuzione di PHP. Si prega di eseguire il cron da terminale per evitare questo limite",
     "crons": "Cron",
     "currency": "Moneta",
@@ -399,7 +399,7 @@
     "debit": "Debit",
     "debug-mode": "Modalità debug",
     "december": "Dicembre",
-    "decimal-separator": "Decimale",
+    "decimal-separator": "Separatore decimale",
     "decimals": "Decimali",
     "default": "Predefinito",
     "default-customer": "cliente predefinito",
@@ -470,7 +470,7 @@
     "document-configuration": "document-configuration",
     "document-report": "Reports documenti",
     "document-sequence": "sequenza del documento",
-    "document-sequences": "document-sequences",
+    "document-sequences": "sequenze di documenti",
     "document-states": "Document states",
     "document-type": "Tipo di documento",
     "document-type-valid-length": "Tipo di documento non valido. Deve essere compreso tra 1 e 20 caratteri.",
@@ -847,7 +847,7 @@
     "languages-pl_PL": "Polaco",
     "languages-pt_BR": "Portoghese (Brasile)",
     "languages-pt_PT": "languages-pt_PT",
-    "languages-va_ES": "languages-va_ES",
+    "languages-va_ES": "Lingua va_ES",
     "last-activity": "L'ultima attività",
     "last-bimester": "last-bimester",
     "last-block": "ultimo blocco",
@@ -861,7 +861,7 @@
     "last-trimester": "Ultimo trimestre",
     "last-update": "last-update",
     "last-user": "Ultimo utente",
-    "last-week": "last-week",
+    "last-week": "La settimana scorsa",
     "last-year": "last-year",
     "latitude": "Latitudine",
     "latitude-abb": "Lat",
@@ -886,7 +886,7 @@
     "loading-controller": "Controller di caricamento: '0'",
     "location": "Posizione",
     "lock-accounting": "Blocca contabilità",
-    "lock-entry": "lock-entry",
+    "lock-entry": "Blocca voce",
     "lock-invoice": "blocca fattura",
     "lock-unlock": "Lock-Unlock",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
@@ -900,7 +900,7 @@
     "login-text": "Accesso",
     "login-to-continue": "login-to-continue",
     "login-to-continue-p": "Devi identificarti per continuare con questa azione. Clicca su accedi o crea un account.",
-    "login-user-not-found": "Utente non trovato",
+    "login-user-not-found": "Utente non trovato: %nick%",
     "logo": "logo",
     "logout": "Disconnettersi",
     "logout-ok": "Disconnettersi con successo.",
@@ -913,7 +913,7 @@
     "low-security": "Low security",
     "machine": "macchina",
     "machines": "machines",
-    "macro-account-note-info": "Keys for values replacement macro",
+    "macro-account-note-info": "Chiavi per sostituire i valori macro",
     "mail-server-error": "Error al conectar al servidor de correo",
     "mail-test-error": "Test dell'e-mail fallito",
     "mail-test-ok": "Test dell'e-mail completata con successo",
@@ -962,7 +962,7 @@
     "missing-file": "Missing file",
     "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
     "mobile": "mobile",
-    "model": "Modelo",
+    "model": "Modello",
     "model-not-found": "model-not-found",
     "monday": "lunedì",
     "month": "Mese",
@@ -984,7 +984,7 @@
     "monthly-payment": "Pago mensual",
     "months": "months",
     "more": "more",
-    "more-fields": "more-fields",
+    "more-fields": "Altro campi",
     "more-plugins": "more-plugins",
     "move-lines": "Sposta linee",
     "movements": "movements",
@@ -1014,7 +1014,7 @@
     "no": "non",
     "no-data": "Nessun dato",
     "no-data-received-form": "Ningún dato recibido por formulario",
-    "no-extra-lines": "no-extra-lines",
+    "no-extra-lines": "Nessuna linea extra",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "no-invoice",
     "no-outstanding-amount": "nessuna somma in sospeso",
@@ -1149,7 +1149,7 @@
     "plugin-disabled": "Plug-in disabilitato correttamente.",
     "plugin-enabled": "Plug-in attivato correttamente.",
     "plugin-file-too-big": "Questo server non consente di caricare file più grandi di %size% MB. Per favore, aumenta la dimensione massima di caricamento dei file in PHP o copia il file nella cartella Plugin.",
-    "plugin-installation-disabled": "plugin-installation-disabled",
+    "plugin-installation-disabled": "Installazione di plugin disabilitata su questo server",
     "plugin-installed": "Plugin installato",
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
     "plugin-need-update-but": "El plugin %plugin% todavía no tiene actualización compatible.",
@@ -1247,7 +1247,7 @@
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro aggiornato correttamente!",
     "recreate-system-integrity": "Recreate system integrity",
-    "rectified-invoice": "rectified-invoice",
+    "rectified-invoice": "Fattura rettificativa",
     "rectified-invoice-p": "Le fatture sono documenti commerciali e hanno una serie di restrizioni legali. Non possono essere eliminate o modificate. Sono ammesse solo restituzioni totali o parziali. Utilizzare questo modulo per eseguire un reso su questa fattura.",
     "rectified-invoices": "Fatture correttive",
     "rectifying": "Rectificativa",
@@ -1271,7 +1271,7 @@
     "rejected": "rifiutato",
     "related": "relazionato",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-purchases-sales": "Subconto correlato per acquisti e vendite",
     "reloading": "reloading",
     "remove-filter": "rimuovi filtro",
     "remove-from-list": "Rimuovi dalla lista",
@@ -1305,7 +1305,7 @@
     "retention": "retention",
     "retentions": "Retentions",
     "review-date": "Data della recensione",
-    "right": "Right",
+    "right": "Destra",
     "risky-customer": "cliente a rischio",
     "rol": "Rol",
     "role": "Ruolo",
@@ -1359,7 +1359,7 @@
     "serial-number": "Serial Number",
     "serie": "serie",
     "serieb": "Serie B",
-    "serier": "Serie R",
+    "serier": "serier",
     "serierb": "Serie RB",
     "series": "serie",
     "server": "Server",
@@ -1452,11 +1452,11 @@
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
     "summary": "Summary",
-    "sums-and-balances": "Sumas y saldos",
+    "sums-and-balances": "Sommare e bilanciare",
     "sunday": "sunday",
     "supplied": "fornito",
     "supplied-amount": "supplied-amount",
-    "supplied-subaccount-not-found": "supplied-subaccount-not-found",
+    "supplied-subaccount-not-found": "Subcuenta non trovata",
     "supplier": "Fornitore",
     "supplier-account-not-found": "supplier-account-not-found",
     "supplier-code": "supplier-code",
@@ -1506,7 +1506,7 @@
     "template": "Modello",
     "template-error": "Errore nel modello",
     "template-not-found": "Modello non trovato",
-    "templates": "Plantillas",
+    "templates": "Modelli",
     "test": "Test",
     "test-mail-not-implemented": "Il test del controller di posta non è implementato",
     "test-sendmail-not-implemented": "Il test del controllore di posta sendmail non è implementato",
@@ -1574,7 +1574,7 @@
     "unit-purchase-price": "Prezzo unitario di acquisto.",
     "unit-sale-price": "prezzo di vendita unitario",
     "unlimited": "Illimitato",
-    "unlink": "Desvincular",
+    "unlink": "Disconnetti",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Disinstallazione cancellata dal registro correttamente.",
     "unlock-entry": "Desbloquear",
@@ -1590,7 +1590,7 @@
     "updater": "Updater",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
     "upload-file": "Subir archivo",
-    "uploaded-at": "Uploaded at",
+    "uploaded-at": "Caricato alle",
     "url": "Sito web",
     "use-gaps": "usa spazi vuoti",
     "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
