--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -591,7 +591,7 @@
     "expiration-type": "expiration-type",
     "expired": "expired",
     "expired-receipt": "R",
-    "export": "export",
+    "export": "exportar",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
     "failed": "Fallido",
@@ -644,7 +644,7 @@
     "for-purchase": "Para compra",
     "for-sale": "À venda",
     "foresee": "Foresee",
-    "format": "format",
+    "format": "formato",
     "formula-cost-price": "formula-cost-price",
     "formula-sale-price": "formula-sale-price",
     "formula-to-apply": "Fórmula para candidatar-se",
@@ -665,7 +665,7 @@
     "generate": "Gerar",
     "generate-accounting-entries": "Generar asientos",
     "generate-accounting-entry": "generate-accounting-entry",
-    "generate-doc-type": "Generate document type",
+    "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "generate-invoice",
     "generate-receipts": "generate-receipts",
     "generate-settlements": "generate-settlements",
@@ -702,7 +702,7 @@
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "group-by-week",
-    "group-by-week-unixtime": "group-by-week-unixtime",
+    "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "group-more-docs-p",
@@ -861,7 +861,7 @@
     "last-trimester": "Último trimestre",
     "last-update": "last-update",
     "last-user": "Último usuario",
-    "last-week": "last-week",
+    "last-week": "semana passada",
     "last-year": "Último ano",
     "latitude": "Latitude",
     "latitude-abb": "Lat",
@@ -1030,7 +1030,7 @@
     "not-allowed-delete": "Não tem permiso para eliminar",
     "not-allowed-modify": "n",
     "not-enough-stock": "not-enough-stock",
-    "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "No público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
@@ -1217,7 +1217,7 @@
     "purchases": "Compras",
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
     "pvp": "Preço de varejo",
-    "pvp-total": "Total retail price",
+    "pvp-total": "Preço total de varejo",
     "pvp-unit": "Unit retail price",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor pvptotal da linha 0 do documento. Valor correto: 1",
