--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -159,7 +159,7 @@
     "billing-address": "Endereço de cobrança",
     "birth-date": "Data de nascimento",
     "birthday": "Aniversário",
-    "block-date": "Block date",
+    "block-date": "Data de bloqueio",
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
     "body": "Corpo",
@@ -355,7 +355,7 @@
     "customer-group": "Grupo de clientes",
     "customer-groups": "Grupos de clientes",
     "customer-invoice": "Fatura de Cliente",
-    "customer-invoice-deleted-successfully": "Fatura de venda 0 excluída com sucesso.",
+    "customer-invoice-deleted-successfully": "Fatura de venda %docCode% foi excluída com sucesso.",
     "customer-invoices": "Faturas de Cliente",
     "customer-not-found": "Cliente não encontrado",
     "customer-order": "Encomenda de Cliente",
@@ -484,7 +484,7 @@
     "done-date": "Data de conclusão",
     "dont-sell-above-pvp": "Não venda acima o preço de varejo",
     "dont-sell-below-cost": "Não venda abaixo o custo",
-    "download": "download",
+    "download": "Baixar",
     "download-completed": "Download completado",
     "download-error": "Error al descargar. Código %status% - %error%",
     "download-xml": "Baixar XML",
@@ -536,10 +536,10 @@
     "equivalent-subaccount-not-found": "Não foi encontrado nenhuma subconta equivalente a %subAccountCode% para copiar.",
     "error": "ERRO: 0",
     "error-checking-vat-number": "Erro ao verificar o número '%vat-number%' no sistema VIES",
-    "error-connecting-memcache": "Erro ao conectar-se ao servidor Memcache.",
+    "error-connecting-memcache": "Erro ao conectar ao servidor Memcache.",
     "error-deleting-lines": "Erro ao excluir linhas",
     "error-no-name-in-settings": "Erro ao testar a vista %viewName%. Nenhuma coluna 'name' no xml",
-    "error-on-xml-file": "Error on XML file %fileName%",
+    "error-on-xml-file": "Erro no arquivo XML %fileName%",
     "error-processing-xmlview": "Erro ao processar a exibição XML, o arquivo '0' não existe ou está incorreto",
     "error-reading-file": "Erro ao ler o arquivo '0'",
     "error-saving-lines": "Erro ao salvar as linhas",
@@ -591,7 +591,7 @@
     "expiration-type": "expiration-type",
     "expired": "expirado",
     "expired-receipt": "R",
-    "export": "export",
+    "export": "exportar",
     "export-bill": "export-bill",
     "extra-file": "Extra file",
     "failed": "Falha",
@@ -665,7 +665,7 @@
     "generate": "Gerar",
     "generate-accounting-entries": "Gerar lançamentos contábeis",
     "generate-accounting-entry": "generate-accounting-entry",
-    "generate-doc-type": "Generate document type",
+    "generate-doc-type": "Gerar tipo de documento",
     "generate-invoice": "Gerar fatura",
     "generate-receipts": "generate-receipts",
     "generate-settlements": "generate-settlements",
@@ -702,7 +702,7 @@
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "group-by-week",
-    "group-by-week-unixtime": "group-by-week-unixtime",
+    "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
     "group-more-docs-p": "group-more-docs-p",
@@ -809,7 +809,7 @@
     "item-limit": "Itens por página",
     "items-added-correctly": "items-added-correctly",
     "items-removed-correctly": "%num% items eliminados corretamente",
-    "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
+    "ivarep-subaccount-not-found": "Subconta de IVA repassado não encontrada",
     "ivasop-account-not-found": "Conta de IVA não encontrada",
     "january": "Janeiro",
     "job-name": "Nome do Trabalho",
@@ -825,7 +825,7 @@
     "lang-code": "Código de idioma",
     "language": "Língua",
     "languages-ca_ES": "Catalão",
-    "languages-cs_CZ": "Checo",
+    "languages-cs_CZ": "Tcheco",
     "languages-de_DE": "Alemão",
     "languages-en_EN": "Inglês",
     "languages-es_AR": "Español (Argentina)",
@@ -1000,7 +1000,7 @@
     "net": "Líquido",
     "new": "Novo",
     "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
-    "new-address": "Nueva traducción",
+    "new-address": "Nova endereço",
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
     "new-invoice-line-p": "Puedes añadir un producto pulsando el botón producto o escribiendo su referencia o código de barras en el campo código de barras. O pulsa el botón línea para una línea sin producto.",
@@ -1030,7 +1030,7 @@
     "not-allowed-delete": "Não tem permiso para eliminar",
     "not-allowed-modify": "n",
     "not-enough-stock": "not-enough-stock",
-    "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>get more details here<\/a>.",
+    "not-passed-integrity-check": "Some files have not passed the integrity check...<br\/>You can <a class='alert-link' target='_blank' href='IntegritySystemCheck'>obter mais detalhes aqui<\/a>.",
     "not-public": "No público",
     "not-stored-content": "Conteúdo não armazenado",
     "not-valid-email": "%email% não é um email válido",
@@ -1062,7 +1062,7 @@
     "only-pending": "Só pendentes",
     "only-suspended": "only-suspended",
     "open": "Abrir",
-    "open-exercise": "open-exercise",
+    "open-exercise": "Abrir exercício",
     "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
@@ -1103,7 +1103,7 @@
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
     "parent-group-loop": "Grupo pai %parentGroup% causando relação circular",
     "partnumber": "Número da peça",
-    "passenger": "Pasajero",
+    "passenger": "Passageiro",
     "password": "Senha",
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
@@ -1144,21 +1144,21 @@
     "picking": "Preparação",
     "plan": "Plano",
     "please-enter-value": "Por favor insira um valor",
-    "plugin": "Plugar",
+    "plugin": "Plugin",
     "plugin-deleted": "O plugin 0 foi excluído com sucesso.",
     "plugin-disabled": "Plugin desativado com sucesso.",
     "plugin-enabled": "Plugin ativado com sucesso.",
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
-    "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
+    "plugin-need-update": "O plugin %plugin% precisa ser atualizado para funcionar com a nova versão do FacturaScripts.",
     "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
     "plugin-needed": "Plugin %pluginName% requerido.",
     "plugin-needs-fs-version": "p",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
     "plugin-order": "O",
     "plugin-phpversion-error": "O plugin %pluginName% requer PHP %php% ou superior",
-    "plugin-removal-disabled": "plugin-removal-disabled",
+    "plugin-removal-disabled": "A remoção de plugins está desativada neste servidor",
     "plugin-unsupported-version": "plugin-unsupported-version",
     "plugin-update": "a",
     "plugins": "Plugins",
@@ -1176,7 +1176,7 @@
     "preview": "preview",
     "previous": "Anterior",
     "previous-balance": "Balanço anterior",
-    "previous-documents": "previous-documents",
+    "previous-documents": "Documentos anteriores",
     "previous-quarter": "Trimestre anterior",
     "previously-purchased-from-supplier": "Comprado anteriormente ao fornecedor",
     "previously-sold-to-customer": "Vendido anteriormente al cliente",
@@ -1196,7 +1196,7 @@
     "priority": "Prioridade",
     "private": "Privado",
     "private-key": "Clave privada",
-    "process": "Proceso",
+    "process": "Processo",
     "processing": "A processar",
     "product": "produtos",
     "product-not-found": "Producto %ref% no encontrado",
@@ -1217,7 +1217,7 @@
     "purchases": "Compras",
     "purchases-subaccount-not-found": "purchases-subaccount-not-found",
     "pvp": "Preço de venda",
-    "pvp-total": "Total retail price",
+    "pvp-total": "Preço total de varejo",
     "pvp-unit": "Unit retail price",
     "pvpsindto-line-error": "Erro no valor de pvpsindto da linha 0 do documento. Valor correto: 1",
     "pvptotal-line-error": "Erro no valor de 'pvptotal' da linha %reference% do documento. Valor correto: %total%",
@@ -1226,7 +1226,7 @@
     "quantity-remaining": "Cantidad restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
-    "randomizer-generating-more-items": "randomizer-generating-more-items",
+    "randomizer-generating-more-items": "Gerando mais itens...",
     "rate": "rate",
     "rates": "Preços",
     "re": "RE",
@@ -1337,7 +1337,7 @@
     "selected-quantity": "approve-quantity",
     "selector-number": "Seletor",
     "send": "Enviar",
-    "send-anonymous-data": "Enviar datos anónimos",
+    "send-anonymous-data": "Enviar dados anônimos",
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
@@ -1437,7 +1437,7 @@
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
     "subaccount-irpf": "Conta para deduções",
-    "subaccount-irpf-creditor": "subaccount-irpf-creditor",
+    "subaccount-irpf-creditor": "Subconta de retenções para compras",
     "subaccount-not-found": "Subconta 0 não encontrado.",
     "subaccount-purchases": "Account for purchases",
     "subaccount-pyg-not-found": "subconta-pyg-não-encontrada",
@@ -1470,7 +1470,7 @@
     "supplier-invoices": "Faturas de Fornecedor",
     "supplier-not-found": "supplier-not-found",
     "supplier-order": "Pedido de fornecedor",
-    "supplier-orders": "Pedidos de fornecedores",
+    "supplier-orders": "Ordens de fornecedor",
     "supplier-payment-concept": "b",
     "supplier-products": "Produtos do fornecedor",
     "supplier-reference": "Referência do fornecedor",
@@ -1497,7 +1497,7 @@
     "tax-area": "Área de impostos",
     "tax-areas": "tax-areas",
     "tax-base": "Tax base",
-    "tax-credit-account": "Credit account for taxes",
+    "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
@@ -1625,7 +1625,7 @@
     "video": "Vídeo",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "Ver API",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
+    "view-column-net-subtotal": "Ver coluna subtotal ou líquido",
     "view-estimation": "Ver orçamento",
     "view-order": "Ver encomenda",
     "warehouse": "Armazém",
